crates/math-core/tests/snapshots/conversion_test__left_right_inner_sup.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\left(x\\right)^2y"
---
<math>
    <mpadded style="padding-right:0.1667em;">
        <msup>
            <mrow>
                <mo>(</mo>
                <mi>x</mi>
                <mo>)</mo>
            </mrow>
            <mn>2</mn>
        </msup>
    </mpadded>
    <mi>y</mi>
</math>
