crates/math-core/tests/snapshots/conversion_test__left_right_inner_sup_at_end.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\left(y\\right)^2"
---
<math>
    <mi>x</mi>
    <msup>
        <mrow>
            <mo lspace="0.1667em">(</mo>
            <mi>y</mi>
            <mo>)</mo>
        </mrow>
        <mn>2</mn>
    </msup>
</math>
