crates/math-core/tests/snapshots/conversion_test__lim_displaystyle.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\displaystyle\\lim_{n\\to\\infty} a_n"
---
<math>
    <mrow displaystyle="true" scriptlevel="0">
        <munder>
            <mo lspace="0" rspace="0.1667em">lim</mo>
            <mrow>
                <mi>n</mi>
                <mo stretchy="false" lspace="0" rspace="0">→</mo>
                <mi>∞</mi>
            </mrow>
        </munder>
        <msub>
            <mi>a</mi>
            <mi>n</mi>
        </msub>
    </mrow>
</math>
