crates/math-core/tests/snapshots/conversion_test__log_in_big.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\bigl(\\log\\bigr) + \\big(\\log\\big)"
---
<math>
    <mo minsize="1.2em" maxsize="1.2em">(</mo>
    <mrow><mspace/><mi>log</mi></mrow>
    <mo minsize="1.2em" maxsize="1.2em">)</mo>
    <mo>+</mo>
    <mo minsize="1.2em" maxsize="1.2em">(</mo>
    <mspace width="0.1667em"/>
    <mrow><mspace/><mi>log</mi></mrow>
    <mspace width="0.1667em"/>
    <mo minsize="1.2em" maxsize="1.2em">)</mo>
</math>
