crates/math-core/tests/snapshots/conversion_test__log_with_limits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\log\\limits_x"
---
<math>
    <munder>
        <mrow><mspace/><mi>log</mi></mrow>
        <mi>x</mi>
    </munder>
</math>
