crates/math-core/tests/snapshots/conversion_test__log_with_subscript.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\log_x"
---
<math>
    <msub>
        <mrow><mspace/><mi>log</mi></mrow>
        <mi>x</mi>
    </msub>
</math>
