crates/math-core/tests/snapshots/conversion_test__long_sub_super.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x_{92}^{31415}"
---
<math>
    <msubsup>
        <mi>x</mi>
        <mn>92</mn>
        <mn>31415</mn>
    </msubsup>
</math>
