crates/math-core/tests/snapshots/conversion_test__lparen_rparen.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\lparen x \\rparen"
---
<math>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo stretchy="false">)</mo>
</math>
